# math-programming

./: .dir-locals.el  .gitignore  ChangeLog.md  README.md  cabal.project  default.nix  flake.nix  math-programming.cabal  package.yaml  shell.nix  stack.yaml
.github/workflows/: main.yaml  main.yml  publish.yml  test.yml
HiGHS-headers/: CHANGELOG.md  HiGHS-headers.cabal  LICENSE  flake.nix  highs.nix
HiGHS-headers/src/Math/Programming/HiGHS/: Header.hsc
app/: Main.hs
examples/: LICENSE  README.md  examples.cabal  sample.3sat
examples/app/: Ex.hs  Example3SAT.lhs  Example3SAT.md  Sudoku.md  Tutorial.hs  Tutorial.md
glpk-headers/: ChangeLog.md  LICENSE  README.md  glpk-headers.cabal  glpk-headers.nix
glpk-headers/src/Math/Programming/Glpk/: Header.hsc
glpk-headers/test/: Diet.hs
glpk-headers/test/Math/Programming/Glpk/: HeadersSpec.hs
math-programming/: ChangeLog.md  LICENSE  README.md  default.nix  math-programming.cabal  math-programming.nix
math-programming-HiGHS/: README.md  flake.nix  test.c
math-programming-glpk/: ChangeLog.md  LICENSE  README.md  default.nix  math-programming-glpk.cabal  math-programming-glpk.nix
math-programming-glpk/src/Math/Programming/: Glpk.hs
math-programming-glpk/src/Math/Programming/Glpk/: Internal.hs
math-programming-glpk/test/: ApiSpec.hs  ApiTests.hs  Driver.hs  RegressionSpec.hs  RegressionTests.hs
math-programming-glpk/test/Math/Programming/: GlpkSpec.hs
math-programming-tests/: ChangeLog.md  README.md  math-programming-tests.cabal
math-programming-tests/src/Math/Programming/: Tests.hs
math-programming-tests/src/Math/Programming/Tests/: Api.hs  Fuzz.hs  IP.hs  LP.hs
math-programming/src/Math/: Programming.hs
math-programming/src/Math/Programming/: Dsl.hs  LinExpr.hs  Types.hs
math-programming/test/: Driver.hs
math-programming/test/Math/Programming/: DslSpec.hs  LinExprSpec.hs  TestLinearExpression.hs  TypesSpec.hs
nix/: cabal2nix.nix  ci.nix  hls.nix  shell.nix  sources.json
s/: build  cabal  haskell-language-server  pipeline  update-project-nix
src/Math/: Programming.hs
src/Math/Programming/: Constraint.hs  Dsl.hs  Expr.hs  Expression.hs  Glpk.hs  Inequality.hs  Types.hs
test/: Diet.hs  Driver.hs  SimpleMIP.hs  TestLinearExpr.hs
test/Math/Programming/: TestLinearExpression.hs
