cabal-version:      3.0
name:               HiGHS-headers
version:            0.1.0.0
synopsis:           Low-level Haskell bindings to the HiGHS solver
description:        Please see the README on GitHub at <https://github.com/prsteele/math-programming/blob/main/HiGHS-headers/README.md>
license:            BSD-3-Clause
license-file:       LICENSE
author:             Patrick Steele
maintainer:         prsteele@proton.me
copyright:          2018-2024, Patrick Steele
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/prsteele/math-programming

common warnings
    ghc-options: -Wall

library
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   src
    exposed-modules:  Math.Programming.HiGHS.Header
    extra-libraries:  highs
    build-depends:    base <5
                    , derive-storable >=0.3

test-suite HiGHS-headers-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        HiGHS-headers
