cabal-version:       2.4
name:                examples
version:             0.6.0
synopsis:            Examples of using the math-programming library.
description:         description:         Please see the README on GitHub at <https://github.com/prsteele/math-programming/blob/main/examples/README.md>
bug-reports:         https://github.com/prsteele/math-programming/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Patrick Steele
maintainer:          steele.pat@gmail.com
copyright:           2021, Patrick Steele
category:            Math
build-type:          Simple
extra-source-files:  README.md, ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/prsteele/math-programming

-- executable 3sat
--   main-is:            Example3SAT.lhs
--   hs-source-dirs:     app
--   default-language:   Haskell2010
--   ghc-options:        -pgmL markdown-unlit
--   build-depends:      base                  ^>=4.14.1.0
--                     , containers ^>=0.6.2.1
--                     , math-programming      ^>=0.6
--                     , math-programming-glpk ^>=0.6
--                     , markdown-unlit
--                     , mtl        ^>=2.2.2
--                     , text                  ^>=1.2.4.1
--   build-tool-depends: markdown-unlit:markdown-unlit

executable 3sat
  main-is:            Ex.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  build-depends:      base                  ^>=4.14.1.0
                    , containers ^>=0.6.2.1
                    , math-programming      ^>=0.6
                    , math-programming-glpk ^>=0.6
                    , mtl        ^>=2.2.2
                    , text                  ^>=1.2.4.1
