cabal-version:       2.4
name:                examples
version:             0.5.0
synopsis:            Examples of using the math-programming library.
description:         description:         Please see the README on GitHub at <https://github.com/prsteele/math-programming/blob/main/examples/README.md>
bug-reports:         https://github.com/prsteele/math-programming/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Patrick Steele
maintainer:          steele.pat@gmail.com
copyright:           2021--2023, Patrick Steele
category:            Math
build-type:          Simple
extra-source-files:  README.md, ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/prsteele/math-programming

executable 3sat
  main-is:            Example3SAT.lhs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -threaded -pgmL markdown-unlit
  build-depends:      base                  ^>=4.15.0.1
                    , containers            ^>=0.6
                    , markdown-unlit        ^>=0.5
                    , math-programming      ^>=0.5
                    , math-programming-glpk ^>=0.5
                    , mtl                   ^>=2.2
                    , text                  ^>=1.2


executable tutorial
  main-is:            Tutorial.lhs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -threaded -pgmL markdown-unlit
  build-depends:      base                  ^>=4.15.0.1
                    , containers            ^>=0.6
                    , markdown-unlit        ^>=0.5
                    , math-programming      ^>=0.5
                    , math-programming-glpk ^>=0.5
                    , mtl                   ^>=2.2
                    , text                  ^>=1.2
