cabal-version:       >=1.10
name:                glpk-headers
version:             0.5.1
synopsis:            Low-level Haskell bindings to the GLPK library
description:         Please see the README on GitHub at <https://github.com/prsteele/glpk-headers-haskell#readme>
bug-reports:         https://github.com/prsteele/glpk-headers-haskell/issues
license:             BSD3
license-file:        LICENSE
author:              Patrick Steele
maintainer:          steele.pat@gmail.com
copyright:           2018-2021, Patrick Steele
category:            Math
build-type:          Simple
extra-source-files:  README.md, ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/prsteele/glpk-headers-haskell

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  exposed-modules:   Math.Programming.Glpk.Header
  extra-libraries:   glpk
  build-depends:     base >=4.13 && <5
                   , derive-storable >=0.2.0.0 && <0.3

test-suite glpk-headers-haskell-test-suite
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  main-is:           Driver.hs
  hs-source-dirs:    test
  extra-libraries:   glpk
  other-modules:     Diet
  build-depends:     base
                   , glpk-headers
                   , tasty
                   , tasty-discover
                   , tasty-hunit