cabal-version:       2.4
name:                glpk-headers
version:             0.6.0
synopsis:            Low-level Haskell bindings to the GLPK library
description:         Please see the README on GitHub at <https://github.com/prsteele/math-programming/blob/main/glpk-headers/README.md>
bug-reports:         https://github.com/prsteele/math-programming/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Patrick Steele
maintainer:          steele.pat@gmail.com
copyright:           2018-2021, Patrick Steele
category:            Math
build-type:          Simple
extra-source-files:  README.md, ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/prsteele/math-programming

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  exposed-modules:   Math.Programming.Glpk.Header
  extra-libraries:   glpk
  build-depends:     base            ^>=4.14.1.0
                   , derive-storable ^>=0.2.0.0

test-suite glpk-headers-haskell-test-suite
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  hs-source-dirs:    test
  extra-libraries:   glpk
  other-modules:     Math.Programming.Glpk.HeadersSpec
  build-depends:     glpk-headers
                   , base  ^>=4.13
                   , hspec ^>=2.7.10