cabal-version:       >=1.10
name:                math-programming-glpk
version:             0.6.0
synopsis:            A GLPK backend to the math-programming library.
description:         Please see the README on GitHub at <https://github.com/prsteele/math-programming/blob/main/math-programming-glpk/README.md>
bug-reports:         https://github.com/prsteele/math-programming/issues
license:             BSD3
license-file:        LICENSE
author:              Patrick Steele
maintainer:          steele.pat@gmail.com
copyright:           2018-2021, Patrick Steele
category:            Math
build-type:          Simple
extra-source-files:  README.md, ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/prsteele/math-programming

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  exposed-modules:   Math.Programming.Glpk
  other-modules:     Math.Programming.Glpk.Internal
  ghc-options:       -Wall
  build-depends:     base             >=4.13   && <5
                   , glpk-headers     >=0.6    && <0.7
                   , math-programming >=0.6    && <0.7
                   , mtl              >=2.2.2  && <2.3
                   , unliftio         >=0.2.15 && <0.3

test-suite math-programming-glpk-test-suite
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  other-modules:     Math.Programming.GlpkSpec
  hs-source-dirs:    test
  ghc-options:       -threaded -with-rtsopts=-N -Wall
  build-depends:     math-programming-glpk
                   , base                   >=4.13   && <5
                   , math-programming       >=0.6    && <0.7
                   , math-programming-tests >=0.6    && <0.7
                   , unliftio               >=0.2.15 && <0.3
                   , hspec                  >=2.7.10 && <2.8
