cabal-version:       >=1.10
name:                math-programming-tests
version:             0.6.0
synopsis:            Utility functions for testing implementations of the math-programming library.
description:         Please see the README on GitHub at <https://github.com/prsteele/math-programming-tests#readme>
bug-reports:         https://github.com/prsteele/math-programming-tests/issues
license:             BSD3
license-file:        LICENSE
author:              Patrick Steele
maintainer:          steele.pat@gmail.com
copyright:           2018-2021, Patrick Steele
category:            Math
build-type:          Simple
extra-source-files:  README.md, ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/prsteele/math-programming-tests

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  exposed-modules:   Math.Programming.Tests
  other-modules:     Math.Programming.Tests.Api
                   , Math.Programming.Tests.LP
                   , Math.Programming.Tests.IP
  ghc-options:       -Wall
  build-depends:     base       >=4.13    && <5
                   , math-programming
                   , tasty
                   , tasty-hunit
                   , tasty-quickcheck
                   , text
