cabal-version:       2.4
name:                math-programming-tests
version:             0.5.0
synopsis:            Utility functions for testing implementations of the math-programming library.
description:         Please see the README on GitHub at <https://github.com/prsteele/math-programming/blob/main/math-programming-tests/README.md>
bug-reports:         https://github.com/prsteele/math-programming/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Patrick Steele
maintainer:          steele.pat@gmail.com
copyright:           2018-2021, Patrick Steele
category:            Math
build-type:          Simple
extra-source-files:  README.md, ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/prsteele/math-programming

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  exposed-modules:   Math.Programming.Tests
                   , Math.Programming.Tests.Api
                   , Math.Programming.Tests.LP
                   , Math.Programming.Tests.IP
  other-modules:
  ghc-options:       -Wall
  build-depends:     base             <5
                   , math-programming ^>=0.5
                   , hspec            ^>=2.8
                   , QuickCheck       ^>=2.14
                   , text             ^>=1.2
