cabal-version:       2.4
name:                math-programming
version:             0.6.0
synopsis:            A library for formulating and solving math programs.
description:         Please see the README on GitHub at <https://github.com/prsteele/math-programming/blob/main/math-programming/README.md>
bug-reports:         https://github.com/prsteele/math-programming/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Patrick Steele
maintainer:          steele.pat@gmail.com
copyright:           2018-2021, Patrick Steele
category:            Math
build-type:          Simple
extra-source-files:  README.md, ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/prsteele/math-programming

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  exposed-modules:   Math.Programming
  other-modules:     Math.Programming.Types
                   , Math.Programming.Dsl
  ghc-options:       -Wall
  build-depends:     base       ^>=4.14.1.0
                   , containers ^>=0.6.2.1
                   , text       ^>=1.2.4.1
                   , transformers
                   , mtl        ^>=2.2.2

test-suite math-programming-test-suite
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  hs-source-dirs:    test
  ghc-options:       -threaded -with-rtsopts=-N -Wall
  other-modules:     Math.Programming.LinearExpressionSpec
  build-depends:     math-programming
                   , base       ^>=4.14.1.0
                   , hspec      ^>=2.7.10
                   , QuickCheck ^>=2.14.2