cabal-version:       2.4
name:                math-programming
version:             0.5.0
synopsis:            A library for formulating and solving math programs.
description:         Please see the README on GitHub at <https://github.com/prsteele/math-programming/blob/main/math-programming/README.md>
bug-reports:         https://github.com/prsteele/math-programming/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Patrick Steele
maintainer:          steele.pat@gmail.com
copyright:           2018-2021, Patrick Steele
category:            Math
build-type:          Simple
extra-source-files:  README.md, ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/prsteele/math-programming

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  exposed-modules:   Math.Programming
                   , Math.Programming.Types
                   , Math.Programming.Dsl
                   , Math.Programming.LinExpr
  other-modules:
  ghc-options:       -Wall
  build-depends:     base         ^>=4.15.0.1
                   , containers   ^>=0.6
                   , text         ^>=2.0
                   -- https://hub.darcs.net/ross/transformers/issue/90
                   , transformers >=0.5.6 && <0.6
                   , mtl          ^>=2.3

test-suite math-programming-test-suite
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  hs-source-dirs:    test
  ghc-options:       -threaded -with-rtsopts=-N -Wall
  other-modules:     Math.Programming.LinExprSpec
                   , Math.Programming.DslSpec
  build-depends:     math-programming
                   , base       ^>=4.15.0.1
                   , QuickCheck ^>=2.14
                   , hspec      ^>=2.8
                   , mtl        ^>=2.3
                   , text       ^>=2.0
